fixed focus visible for social icon

--- a/app/scss/layout/_footer.scss
+++ b/app/scss/layout/_footer.scss
@@ -99,10 +99,11 @@
     justify-content: center;
     align-items: center;
   }
+
   &__item {
     padding: 0.5rem;
   }
-  &__link img {
+  &__link .icon {
     &:hover {
       filter: brightness(0);
     }
